--- a/newProject.html
+++ b/newProject.html
@@ -292,5 +292,8 @@
       alert("Project assigned sucessfully");
       document.getElementById("myform").reset();
     }
+    function button1(){
+      console.log('hello");
+    }
   </script>
 </html>
